--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="global.css" />
   </head>
   <body>
-    <img class="imgbackground" src="image/viagem.png"/>
+    <img class="imgbackground" src="../image/viagem.png"/>
     <div class="app">
       <header class="header">
         <div>
